--- a/lang/lang.en-GB.json
+++ b/lang/lang.en-GB.json
@@ -192,7 +192,8 @@
             "dev": "dev",
             "help": "help",
             "info": "info",
-            "test": "test"
+            "test": "test",
+            "insertUser": "insert_user"
         },
         "userCommands": {
             "viewDateJoined": "View Date Joined"
@@ -208,7 +209,8 @@
             "dev": "Developer use only.",
             "help": "Find help or contact support.",
             "info": "View bot info.",
-            "test": "Run the test command."
+            "test": "Run the test command.",
+            "insertUser": "Test inserting a user to MongoDB."
         },
         "argDescs": {
             "devCommand": "Command.",
